--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -52,20 +52,23 @@
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">
-              Products
+              Food
             </h6>
             <p>
-              <a href="#!" class="text-reset">Angular</a>
+              <a href="#!" class="text-reset">Wedding menu</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">React</a>
+              <a href="#!" class="text-reset">Hindu Wedding</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Vue</a>
+              <a href="#!" class="text-reset">Muslim wedding</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Laravel</a>
+              <a href="#!" class="text-reset">Christian  wedding</a>
             </p>
+            <p>
+                <a href="#!" class="text-reset">Customizable options also available</a>
+              </p>
           </div>
           <!-- Grid column -->
   
@@ -96,10 +99,10 @@
             <h6 class="text-uppercase fw-bold mb-4">
               Contact
             </h6>
-            <p><i class="fa fa-home me-3"></i> New York, NY 10012, US</p>
+            <p><i class="fa fa-home me-3"></i> Kerala, India</p>
             <p>
               <i class="fa fa-envelope me-3"></i>
-              info@example.com
+            cravedesignedforu@gmail.com
             </p>
             <p><i class="fa fa-phone me-3"></i> + 01 234 567 88</p>
             <p><i class="fa fa-print me-3"></i> + 01 234 567 89</p>
@@ -113,8 +116,8 @@
   
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-      © 2021 Copyright:
-      <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      © 2021 Copyright:Crave caters
+      <a class="text-reset fw-bold" href="#"></a>
     </div>
     <!-- Copyright -->
   </footer>
