--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,49 +1,57 @@
-<!--<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+
+   <div class=" text-center text-lg-start bg-black">
+   <!-- Grid container -->
+    <div class="container p-4 bg-black">
+      <!--Grid row-->
+      <div id="colo" class="row ">
+        <!--Grid column-->
+        <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+          <h5 id="vision" class="text-uppercase">VISION</h5>
+  
+          <p id="vision">
+          Food one of the basic requirement of human is being wasted on large amount on daily basis. When minority of population
+          is wating a large quantity of food there is people who dies and suffers from malnutrition.Here we present a Customizable
+          catering service where you can customize your menu and order items according to your choice.
+          </p>
+        </div>
+        <!--Grid column-->
+  
+        <!--Grid column-->
+        <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+          <h5  id="mission" class="text-uppercase">MISSION</h5>
+  
+          <p id="mission">
+            Our aim is to provide the customer a choice to customize their menu by choosing the quantity and items they want in an 
+            affordable rate. To make every special event more special .There is only one options it's crave caters
+          </p>
+        </div>
+        <!--Grid column-->
+      </div>
+      <!--Grid row-->
     </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="assets/images/food2.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+    <!-- Grid container -->
+</div>
+    <div
+    class="p-5 text-center bg-image"
+    style="
+      background-image: url('https://images.unsplash.com/photo-1518619745898-93e765966dcd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8ZXZlbnQlMjBmb29kfGVufDB8fDB8fA%3D%3D&w=1000&q=80');
+      height: 400px;
+    "
+  >
+    <div  id="ll" class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
+      <div class="d-flex justify-content-center align-items-bottom h-100">
+         
+        <div  class="text-white">
+            <br><br>
+          <h1 class="mb-3">Lets make it delicious</h1>
+          
+          <a id="quote" class="btn btn-outline-light btn-lg" href="#!" role="button"
+          >Quote your order today</a
+          >
         </div>
       </div>
-      <div class="carousel-item">
-        <img src="assets/images/food1.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="assets/images/food2.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="assets/images/food3.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-    
-            <div class="container">
-                <div id="txt0" class="masthead-subheading">So whats the event?</div>
-                <div id="txt1" class="masthead-heading text-uppercase">Tell your requirements</div>
-                <a id ="special" class="btn btn-primary btn-xl text-uppercase" href="#">Let's make it more special</a>
-            </div>
-        </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>-->
+  </div>
+  
+   
+  
