--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,13 +6,13 @@
       class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
     >
       <!-- Left -->
-      <div class="me-5 d-none d-lg-block">
+      <div id="hello text-lg-start" class="me-5 d-none d-lg-block">
         <span>Get connected with us on social networks:</span>
       </div>
       <!-- Left -->
   
       <!-- Right -->
-      <div>
+      <div id="hai text-lg-start">
         <a href="" class="me-4 text-reset">
           <i class="fa fa-facebook-f"></i>
         </a>
