--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -57,6 +57,66 @@
     </div>
   </div>
 
+
+  <section class="page-section bg-black p-4" id="team">
+    <div class="container">
+        <div class="text-center">
+            <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
+            <h3 class="section-subheading text-muted">.</h3>
+        </div>
+        <div class="row">
+            <div class="col-lg-3">
+                <div class="team-member">
+                    <img class="mx-auto rounded-circle" src="assets/images/icon.jpg" alt="..." />
+                    <h4>Anantha krishnan Prathapan</h4>
+                    <p class="text-muted">Role</p>
+                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Twitter Profile"><i class="fa fa-twitter"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Facebook Profile"><i class="fa fa-facebook-f"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fa fa-instagram"></i></a>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="team-member">
+                    <img class="mx-auto rounded-circle" src="assets/images/icon.jpg" alt="..." />
+                    <h4>Nji Jose</h4>
+                    <p class="text-muted">Role</p>
+                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i class="fa fa-twitter"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Facebook Profile"><i class="fa fa-facebook-f"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen LinkedIn Profile"><i class="fa fa-instagram"></i></a>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="team-member">
+                    <img class="mx-auto rounded-circle" src="assets/images/icon.jpg" alt="..." />
+                    <h4>Nimisha Noushad</h4>
+                    <p class="text-muted">Role</p>
+                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fa fa-twitter"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fa fa-facebook-f"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fa fa-instagram"></i></a>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="team-member">
+                    <img class="mx-auto rounded-circle" src="assets/images/icon.jpg" alt="..." />
+                    <h4>Alna C.L</h4>
+                    <p class="text-muted">Role</p>
+                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fa fa-twitter"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fa fa-facebook-f"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fa fa-instagram"></i></a>
+                </div>
+            </div>
+            
+        </div>
+        <br>
+        <div class="row">
+            
+            <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">"Celebrate flavor.
+                Love flavour love life.
+                We will make your celebration of food with your family and friends lovely"</p></div>
+        </div>
+    </div>
+</section>
+
   
    
   
