--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -54,3 +54,13 @@ img{
     font-family:cursive;
 
 }
+#co{
+    box-flex-group: black;
+    background-color:black;
+    text-align: justify;
+   color: aliceblue;
+}
+#foo{
+    height: 250px;
+    width: auto;
+}
