--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,7 +33,44 @@
    </div>
 
 
-
+   <div id="co" class="row row-cols-1 row-cols-md-2 g-4 bg-black">
+    <div class="col">
+      <div class="card">
+        <img id="foo" src="assets/images/food1.jpg" class="card-img-top" alt="...">
+        <div id="co" class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img  id="foo" src="assets/images/food2.jpg" class="card-img-top" alt="...">
+        <div id="co" class="card-body">
+          <h5 class="card-title">Why to register in crave</h5>
+          <p class="card-text"> Crave a place where user is prioritized.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img  id="foo" src="assets/images/food3.jpg" class="card-img-top" alt="...">
+        <div id="co" class="card-body">
+          <h5 class="card-title">Customizable menu??</h5>
+          <p class="card-text">The customer can select </p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img  id="foo" src="assets/images/food4.jpg" class="card-img-top" alt="...">
+        <div id="co" class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <div
     class="p-5 text-center bg-image"
