--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,13 +33,13 @@
    </div>
 
 
-   <div id="co" class="row row-cols-1 row-cols-md-2 g-4 bg-black">
+   <div id="co p-4" class="row row-cols-1 row-cols-md-2 g-4 bg-black">
     <div class="col">
       <div class="card">
         <img id="foo" src="assets/images/food1.jpg" class="card-img-top" alt="...">
         <div id="co" class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">Service limit</h5>
+          <p class="card-text">There is no limit you can order food of any quantity within kerala.</p>
         </div>
       </div>
     </div>
@@ -65,21 +65,21 @@
       <div class="card">
         <img  id="foo" src="assets/images/food4.jpg" class="card-img-top" alt="...">
         <div id="co" class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">Reliable</h5>
+          <p class="card-text">We make sure that you are satisfied and happy</p>
         </div>
       </div>
     </div>
   </div>
 
     <div
-    class="p-5 text-center bg-image"
+    class="p-5 text-center bg-image mx-3"
     style="
       background-image: url('https://images.unsplash.com/photo-1518619745898-93e765966dcd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8ZXZlbnQlMjBmb29kfGVufDB8fDB8fA%3D%3D&w=1000&q=80');
       height: 400px;
     "
   >
-    <div  id="ll" class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
+    <div  id="ll" class="mask p-4" style="background-color: rgba(0, 0, 0, 0.6);">
       <div class="d-flex justify-content-center align-items-bottom h-100">
          
         <div  class="text-white">
