--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -80,7 +80,7 @@
           <li class="nav-item mx-1">
             <a
               class="nav-link"
-              href="#"
+              routerLink="menu"
               target="_blank"
               >Menu</a
             >
@@ -88,7 +88,7 @@
           <li class="nav-item mx-1">
             <a
               class="nav-link"
-              href="#"
+              routerLink="cart"
               target="_blank"
               >Cart</a
             >
@@ -96,7 +96,7 @@
           <li class="nav-item mx-1">
             <a
               class="nav-link"
-              href="#"
+              routerLink="login"
               rel="nofollow"
               target="_blank"
               >Login</a
@@ -105,7 +105,7 @@
           <li class="nav-item mx-1">
             <a
               class="nav-link"
-              href="#"
+              routerLink="register"
               target="_blank"
               >Register</a>
             >
@@ -113,7 +113,7 @@
           <li class="nav-item mx-1">
             <a
               class="nav-link"
-              href="#"
+              routerLink="about us"
               target="_blank"
               >About us</a
             >
@@ -121,7 +121,7 @@
           <li class="nav-item ">
             <a
               class="nav-link"
-              href="#"
+              routerLink="contact us"
               target="_blank"
               >Contact us</a
             >
